--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -91,7 +91,7 @@ body {
   text-align: right;
   a{
     text-decoration: none;
-    color: #7b7a7a;
+    color: #106DB6;
     font-weight: 500;;
     cursor: pointer;
   }
@@ -103,7 +103,7 @@ body {
   text-align: center;
   a{
     text-decoration: none;
-    color: #7b7a7a;
+    color: #106DB6;
     font-weight: 500;
     cursor: pointer;
   }
