--- a/src/app/main/unit/unit.component.html
+++ b/src/app/main/unit/unit.component.html
@@ -13,8 +13,8 @@
       </div>
     </div>
     <div class="col-md-6 btn_search">
-      <button class="btn btn-lg btn-block btn_submit" (click)="searchUnit()">{{'btn.search' | translate }}</button>
-      <button class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
+      <button *ngIf="isQLTC_03" class="btn btn-lg btn-block btn_submit" (click)="searchUnit()">{{'btn.search' | translate }}</button>
+      <button *ngIf="isQLTC_01" class="btn btn-lg btn-block btn_submit" (click)="addUnit()">{{'btn.add' | translate }}</button>
     </div>
   </div>
   <div class="row" style="padding-top: 20px;">
@@ -28,13 +28,13 @@
       </ng-template>
       <ng-template pTemplate="body" let-rowNode let-rowData="rowData">
         <tr>
-          <td><p-treeTableToggler [rowNode]="rowNode" style="color: #106DB6;"></p-treeTableToggler><a (click)="detailUnit(rowData.id)" style="color: #0160AE; cursor: pointer;">{{rowData.name}}</a></td>
+          <td><p-treeTableToggler [rowNode]="rowNode" style="color: #106DB6;"></p-treeTableToggler><a (click)="isQLTC_04?detailUnit(rowData.id):null" style="color: #0160AE; cursor: pointer;">{{rowData.name}}</a></td>
           <td>{{rowData.short_name}}</td>
           <td>{{rowData.code}}</td>
           <td>{{rowData.status==1?'Hoạt động':'Không hoạt động'}}</td>
           <td>{{rowData.parent_id==null?'Tổ chức cha':'Tổ chức con'}}</td>
-          <td style="text-align: center" *ngIf="rowData.is_edit">
-            <img src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUnit(rowData.id)" style="cursor: pointer;"/>
+          <td style="text-align: center">
+            <img *ngIf="rowData.is_edit && isQLTC_02" src="../../../assets/img/icon_edit.svg" width="20px" (click)="editUnit(rowData.id)" style="cursor: pointer;"/>
           </td>
         </tr>
       </ng-template>
