--- a/src/app/main/contract-type/contract-type.component.html
+++ b/src/app/main/contract-type/contract-type.component.html
@@ -1,12 +1,12 @@
-<div *ngIf="isQLLHD_04" class="container-fluid">
+<div *ngIf="isQLLHD_01 || isQLLHD_02 || isQLLHD_03 || isQLLHD_04 || isQLLHD_05" class="container-fluid">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3" *ngIf="isQLLHD_04">
       <div>{{'contract-type.code' | translate}}</div>
       <div class="input-line">
         <input type="text" [(ngModel)]="code" class="input_text"/>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3" *ngIf="isQLLHD_04">
       <div>{{'contract-type.name' | translate}}</div>
       <div class="input-line">
         <input type="text" [(ngModel)]="name" class="input_text"/>
@@ -53,7 +53,7 @@
     </div>
   </div>
 </div>
-<div *ngIf="!isQLLHD_04">
+<div *ngIf="!isQLLHD_01 && !isQLLHD_02 && !isQLLHD_03 && !isQLLHD_04 && !isQLLHD_05">
   Bạn không có quyền thực hiện tác vụ này!
 </div>
  
