--- a/src/app/main/unit/unit.component.html
+++ b/src/app/main/unit/unit.component.html
@@ -1,12 +1,12 @@
-<div *ngIf="isQLTC_03" class="container-fluid">
+<div *ngIf="isQLTC_01 || isQLTC_02 || isQLTC_03 || isQLTC_04" class="container-fluid">
   <div class="row">
-    <div class="col-md-3">
+    <div class="col-md-3" *ngIf="isQLTC_03">
       <div>{{'unit.code' | translate}}</div>
       <div class="input-line">
         <input type="text" [(ngModel)]="code" class="input_text"/>
       </div>
     </div>
-    <div class="col-md-3">
+    <div class="col-md-3" *ngIf="isQLTC_03">
       <div>{{'unit.name' | translate}}</div>
       <div class="input-line">
         <input type="text" [(ngModel)]="name" class="input_text"/>
@@ -45,7 +45,7 @@
     </div> 
   </div>
 </div>
-<div *ngIf="!isQLTC_03">
+<div *ngIf="!isQLTC_01 && !isQLTC_02 && !isQLTC_03 && !isQLTC_04">
   Bạn không có quyền thực hiện tác vụ này!
 </div>
  
